tests/errors/test1.c
int x = 10;
float y;
y = 3.14;

// Type mismatch
x = y;

// Undeclared variable
z = 50;

// Redeclaration
int x;